    (Akira AJISAKA via jlowe)

    MAPREDUCE-6029. TestCommitterEventHandler fails in trunk (Mit Desai via
    jlowe)

    MAPREDUCE-6122. TestLineRecordReader may fail due to test data files checked
    out of git with incorrect line endings. (cnauroth)

    MAPREDUCE-6123. TestCombineFileInputFormat incorrectly starts 2
    MiniDFSCluster instances. (cnauroth)

    MAPREDUCE-6125. TestContainerLauncherImpl sometimes fails (Mit Desai via
    jlowe)

    MAPREDUCE-6115. TestPipeApplication#testSubmitter fails in trunk (Binglin
    Chang via jlowe)

    MAPREDUCE-5873. Shuffle bandwidth computation includes time spent waiting
    for maps (Siqi Li via jlowe)

    MAPREDUCE-5542. Killing a job just as it finishes can generate an NPE in
    client (Rohith via jlowe)

    MAPREDUCE-6126. Fixed Rumen JobBuilder to ignore NormalizedResourceEvent.
    (Junping Du via jianhe)

    MAPREDUCE-6142. Fixed test failures in TestJobHistoryEventHandler and
    TestMRTimelineEventHandling. (Zhijie Shen via vinodkv)

    MAPREDUCE-6022. map_input_file is missing from streaming job environment.
    (jlowe via kihwal)

    MAPREDUCE-6048. Fixed TestJavaSerialization failure. (Varun Vasudev via
    jianhe)

    MAPREDUCE-5960. JobSubmitter's check whether job.jar is local is incorrect
    with no authority in job jar path. (Gera Shegalov via jlowe)

    MAPREDUCE-5958. Wrong reduce task progress if map output is compressed
    (Emilio Coppa and jlowe via kihwal)

    MAPREDUCE-6156. Fetcher - connect() doesn't handle connection refused
    correctly (Junping Du via jlowe)

Release 2.5.2 - 2014-11-19

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES


Release 2.5.1 - 2014-09-05

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-6033. Updated access check for displaying job information
    (Yu Gao via Eric Yang)

Release 2.5.0 - 2014-08-11

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS
